# demeter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  rebuild_docker.sh
src/demeter/: config.example.ini  mail_info.py  remote_proxy_config.py  utils.py
src/demeter/fetch/: base.py  cf.py  login.py  mailbox.py  proxy_config.py
src/demeter/resources/: clash.yaml  sing-box-template-example.json  singbox.json  singboxandroid.json  singboxcompany.json  singboxios.json  singboxwin.json  singboxwindows.json
