[project]
name = "demeter"
version = "0.2.0"
description = "Handle all http request"
authors = [
    { name = "windows@home", email = "programlfyh@proton.me" }
]
dependencies = [
    "pandas==2.2.2",
    "requests==2.31.0",
    "swifter==1.4.0",
    "sqlalchemy==2.0.24",
    "openpyxl==3.1.2",
    "flask>=3.0.3",
    "python-dotenv>=1.0.1",
    "lxml>=5.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/demeter"]
